[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/sakura.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://utility scenes/hitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://utility scenes/cooldownUI.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 28.5 )

[node name="sakura" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="hitBox" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 70, 0 )

[node name="buff" type="Node2D" parent="."]
visible = false
position = Vector2( -1, 28 )
scale = Vector2( 0.2, 0.2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="buff"]
modulate = Color( 1, 0, 0, 1 )
amount = 5
explosiveness = 0.16
randomness = 0.11
texture = ExtResource( 2 )
gravity = Vector2( 0, -800 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="buff"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 85, 30 )
amount = 5
explosiveness = 0.16
randomness = 0.11
texture = ExtResource( 2 )
gravity = Vector2( 0, -800 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="buff"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -75, 15 )
amount = 5
explosiveness = 0.16
randomness = 0.11
texture = ExtResource( 2 )
gravity = Vector2( 0, -800 )

[node name="cooldownUI" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="buffTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="buffTimer" to="." method="_on_buffTimer_timeout"]
